--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </p>
                 <p class="mt-5">
                     &nbsp;&nbsp;&nbsp;&nbsp;
-                    Saya bukanlah seorang yang pintar, dengan riwayat pendidikan yang biasa-biasa saja. Tetapi saya lebih menekankan pada kerja keras, inovasi dan peluang yang ada. Dengan kemudahan akses internet, saya merasa dipermudah untuk mengembangkan kemampuan diri, meski riwayat akademis saya termasuk medioker atau bahkan dibawah rata-rata. Tetapi yakin pada diri sendiri adalah salah satu kunci menuju kesuksesan.
+                    Saya bukanlah seorang yang pintar, dengan riwayat pendidikan yang biasa-biasa saja. Tetapi saya lebih menekankan pada kerja keras, inovasi dan peluang yang ada. Dengan kemudahan akses internet, saya merasa dipermudah untuk mengembangkan kemampuan diri, meski riwayat akademis saya termasuk medioker atau bahkan dibawah rata-rata. Tetapi yakin pada diri sendiri adalah salah satu kunci keberhasilan.
                 </p>
                 <p class="mt-5">
                     &nbsp;&nbsp;&nbsp;&nbsp;
@@ -79,11 +79,11 @@
                         <p class="">Linux</p>
                         <img src="linux.svg" alt="linux logo" class="h-7">
                     </div>
-                    <div class="flex items-center justify-between border-b border-gray-300 p-2">
+<!--                     <div class="flex items-center justify-between border-b border-gray-300 p-2">
                         <p class="">Laravel</p>
                         <img src="laravel.svg" alt="laravel logo" class="h-7">
                     </div>
-                    <div class="flex items-center justify-between border-b border-gray-300 p-2">
+ -->                    <div class="flex items-center justify-between border-b border-gray-300 p-2">
                         <p class="">Golang</p>
                         <img src="go.svg" alt="go logo" class="h-7">
                     </div>
@@ -103,14 +103,14 @@
                         <p class="">Vue.js</p>
                         <img src="vuejs.svg" alt="vuejs logo" class="h-7">
                     </div>
-                    <div class="flex items-center justify-between border-b border-gray-300 p-2">
+<!--                     <div class="flex items-center justify-between border-b border-gray-300 p-2">
                         <p class="">Video Editing</p>
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-7">
                             <path stroke-linecap="round" stroke-linejoin="round" d="m15.75 10.5 4.72-4.72a.75.75 0 0 1 1.28.53v11.38a.75.75 0 0 1-1.28.53l-4.72-4.72M4.5 18.75h9a2.25 2.25 0 0 0 2.25-2.25v-9a2.25 2.25 0 0 0-2.25-2.25h-9A2.25 2.25 0 0 0 2.25 7.5v9a2.25 2.25 0 0 0 2.25 2.25Z" />
                         </svg>
-                    </div>
+                    </div> -->
                     <div class="flex items-center justify-between p-2">
-                        <p class="">UI Design & Illustration</p>
+                        <p class="">UI Design</p>
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="h-7">
                             <path fill-rule="evenodd" d="M20.599 1.5c-.376 0-.743.111-1.055.32l-5.08 3.385a18.747 18.747 0 0 0-3.471 2.987 10.04 10.04 0 0 1 4.815 4.815 18.748 18.748 0 0 0 2.987-3.472l3.386-5.079A1.902 1.902 0 0 0 20.599 1.5Zm-8.3 14.025a18.76 18.76 0 0 0 1.896-1.207 8.026 8.026 0 0 0-4.513-4.513A18.75 18.75 0 0 0 8.475 11.7l-.278.5a5.26 5.26 0 0 1 3.601 3.602l.502-.278ZM6.75 13.5A3.75 3.75 0 0 0 3 17.25a1.5 1.5 0 0 1-1.601 1.497.75.75 0 0 0-.7 1.123 5.25 5.25 0 0 0 9.8-2.62 3.75 3.75 0 0 0-3.75-3.75Z" clip-rule="evenodd" />
                         </svg>
@@ -193,7 +193,7 @@
             </h1>
             <p>
                 &nbsp;&nbsp;&nbsp;&nbsp;
-                Berikut beberapa project yang pernah saya kerjakan. Baik dari website, video editing, desain grafis, dan sebagainya.
+                Berikut beberapa project website yang pernah saya kerjakan.
             </p>
             <p class="text-right text-gray-400">
                 Scroll Please
